kubernetes/core/nginx-system/services/opnsense/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: opnsense
  namespace: ingress-nginx-system
spec:
  type: ExternalName
  externalName: router.${LOCAL_DOMAIN}
  ports:
    - name: http
      port: &port 80
      protocol: TCP
      targetPort: *port
