kubernetes/core/nginx-system/services/opnsense/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app opnsense
  namespace: ingress-nginx-system
spec:
  ingressClassName: "nginx"
  rules:
    - host: &host opnsense.${LOCAL_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            # backend:
            #   service:
            #     name: *app
            #     port:
            #       number: 80
  tls:
    - hosts:
        - *host
